refactor: передеплой на firebase

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/rickandmorty-c6ac8/favicon.jpg" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="React Optimization PWA" />
-		<link rel="manifest" href="/rickandmorty-c6ac8/manifest.json" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Rick And Morty</title>
 	</head>
 	<body>
